--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<html class="grey-section-html"lang="pt-br">
+<html class=" grey-section-html" lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -25,7 +25,7 @@
                             <path id="path3" d="M362.469 126.600 C 362.385 127.848,362.482 128.000,363.364 128.000 C 364.463 128.000,365.085 127.381,364.302 127.066 C 364.015 126.950,364.117 126.850,364.543 126.832 C 365.050 126.810,365.209 126.600,365.043 126.167 C 364.909 125.819,364.800 125.459,364.800 125.367 C 364.800 124.223,362.549 125.413,362.469 126.600 "
                                 stroke="none" fill="#ffff55" fill-rule="evenodd"></path>
                             <path id="path4" d="" stroke="none" fill="#e4fee4" fill-rule="evenodd"></path>
-                        </g> 
+                        </g>
                     </svg>
                 </a>
 
@@ -130,24 +130,233 @@
 
                 <div class="mdc-grid-tile__secondary">
                     <span class="mdc-grid-tile__title">Lab 1
-                    </span>                        
+                    </span>
                 </div>
 
             </li>
             <li class="mdc-grid-tile">
                 <div class="mdc-grid-tile__primary">
-                        <div class="mdc-grid-tile__primary-content my-tile-image">
-                            
-                        </div>
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
                 </div>
 
                 <div class="mdc-grid-tile__secondary">
                     <span class="mdc-grid-tile__title">Lab 2
-                    </span>                        
+                    </span>
                 </div>
 
             </li>
-            
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 3
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 4
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 5
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 6
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 7
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 8
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 9
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 10
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 11
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 12
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 13
+                    </span>
+                </div>
+
+            </li>
+
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 14
+                    </span>
+                </div>
+
+            </li>
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 15
+                    </span>
+                </div>
+
+            </li>
+
+            <li class="mdc-grid-tile">
+                <div class="mdc-grid-tile__primary">
+                    <div class="mdc-grid-tile__primary-content my-tile-image">
+
+                    </div>
+                </div>
+
+                <div class="mdc-grid-tile__secondary">
+                    <span class="mdc-grid-tile__title">Lab 16
+                    </span>
+                </div>
+
+            </li>
+
+
+
         </ul>
     </section>
 
