--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         </ul>
     </section>
 
-    <script src="index.js"></script>
+    <script src="script/index.js"></script>
 </body>
 
 </html>
