Started permissions menu

--- a/historico.html
+++ b/historico.html
@@ -7,7 +7,7 @@
     <title>Histórico</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="bundle.js" async></script>
-    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="script/jquery.slim.min.js"></script>
     <link rel="stylesheet" href="bundle.css">
     <link href="style/fontes-google.css" rel="stylesheet">
     <link href="style/icons-google.css" rel="stylesheet">
