--- a/reserva-avulsa.html
+++ b/reserva-avulsa.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <link rel="stylesheet" href="./node_modules/materialize-css/dist/css/materialize.css">
+    <script src="script/jquery.slim.min.js"></script>
+    <link rel="stylesheet" href="style/materialize.css">
     <link rel="stylesheet" href="bundle.css">
     <link href="style/fontes-google.css" rel="stylesheet">
     <link href="style/icons-google.css" rel="stylesheet">
@@ -174,7 +174,7 @@
     </aside>
 </body>
 <script src="bundle.js" async></script>
-<script src="./node_modules/materialize-css/dist/js/materialize.js"></script>
+<script src="script/materialize.js"></script>
 <script>
 
 </script>
