--- a/server/public/cadastro.html
+++ b/server/public/cadastro.html
@@ -135,14 +135,15 @@
             </div>
 
             <div class="pg2" id="cadastrar-buttons-id">
-                <button class="mdc-button mdc-button--raised dark-ripple" id="cadastrar-button-id">Cadastrar</button>
+                <button class="mdc-button mdc-button--raised dark-ripple" id="cadastrar-button-id" onclick="cadastrar()">Cadastrar</button>
             </div>
         </div>
 
 
     </section>
-    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="script/jquery.slim.min.js"></script>
     <script src="script/cadastro.js"></script>
+    <script src="script/api.js"></script>
 </body>
 
 </html>
