"Session and Sign up"

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="bundle.css">
     <link href="style/fontes-google.css" rel="stylesheet">
     <link href="style/icons-google.css" rel="stylesheet">
+    <script src="script/check.js"></script>
 </head>
 
-<body class="mdc-typography">
+<body class="mdc-typography" onload="verifica()">
 
     <div class="mdc-menu" tabindex="-1">
         <ul class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
