--- a/server/public/login.html
+++ b/server/public/login.html
@@ -79,13 +79,11 @@
                 <a href="cadastro.html">
                     <button class="mdc-button" id="cadastrar-button-id">Cadastrar</button>
                 </a>
-                <button class="mdc-button mdc-button--raised dark-ripple" id="login-button-id">Login</button>
+                <button class="mdc-button mdc-button--raised dark-ripple" id="login-button-id" onclick="login()">Login</button>
             </div>
         </div>
-
-
     </section>
-
+    <script src="script/api.js"></script>
 </body>
 
 </html>
